[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
rust-version = "1.69.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10.0"
indicatif = "0.17.4"
log = "0.4.18"